[package]
name = "rubicon"
version = "3.0.0"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bearcove/rubicon"
description = "Deduplicate globals across shared objects to enable a dangerous form of dynamic linking"
categories = ["development-tools::ffi"]
keywords = ["ffi", "thread-local"]

[lib]
crate-type = ["dylib"]

[dependencies]
paste = { version = "1.0.15", optional = true }

[features]
default = []
export-globals = ["dep:paste"]
import-globals = ["dep:paste"]
