[package]
name = "rubicon"
version = "3.0.1"
edition = "2021"
authors = ["Amos Wenger <amos@bearcove.net>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/bearcove/rubicon"
description = "Deduplicate globals across shared objects to enable a dangerous form of dynamic linking"
categories = ["development-tools::ffi"]
keywords = ["ffi", "thread-local"]

[lib]
crate-type = ["dylib"]

[dependencies]
ctor = { version = "0.2.8", optional = true }
libc = { version = "0.2.155", optional = true }
paste = { version = "1.0.15", optional = true }

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }

[features]
default = []
export-globals = ["dep:paste", "dep:rustc_version"]
import-globals = ["dep:paste", "dep:rustc_version", "dep:ctor", "dep:libc"]
ctor = ["dep:ctor"]
