[package]
name = "mod_a"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mokio = { version = "0.1.0", path = "../mokio", features = [
    "import-globals",
    "timer",
] }
rubicon = { path = "../../rubicon" }
soprintln = { version = "3.0.0", features = ["print"] }
